Spring project with edit form

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <modules>
         <module>spring_I_Oc</module>
         <module>spring_Mvc</module>
-		
+        <module>spring_hibernate_cars</module>
     </modules>
 	 
 	 <build>
