Car selling with crur repository.

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>spring_I_Oc</module>
         <module>spring_Mvc</module>
         <module>spring_hibernate_cars</module>
+        <module>spring-data-cars</module>
     </modules>
 	 
 	 <build>
