--- a/spring-data-cars/pom.xml
+++ b/spring-data-cars/pom.xml
@@ -9,6 +9,7 @@
         <version>2.1.4.RELEASE</version>
     </parent>
 
+
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
 
@@ -47,6 +48,10 @@
             <version>2.1.4.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
         <dependency>
@@ -100,7 +105,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl -->
+
         <!--<dependency>-->
             <!--<groupId>javax.servlet.jsp.jstl</groupId>-->
             <!--<artifactId>jstl</artifactId>-->
@@ -108,10 +113,18 @@
         <!--</dependency>-->
 
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
+
+
     </dependencies>
 
     
