--- a/spring-data-cars/src/main/resources/application.properties
+++ b/spring-data-cars/src/main/resources/application.properties
@@ -9,8 +9,9 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql = true
 
 spring.mvc.view.prefix= WEB-INF/views/
 spring.mvc.view.suffix= .jsp
+
